2004-02-28  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_accel_group_connect): Add wrapper
	for gtk_accel_group_connect.

2004-02-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtkmodule.c, gtk/pygtk.h: Make pygdk_rectangle_from_pyobject
	a public API function.  Fixes #135279.

2004-02-24  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_stock_list_ids): Plug a leak.

	* pygobject.c (pygobject_chain_from_overridden): signa->signal

2004-02-23  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.defs (GdkDrawable.get_image): Add caller-owns-return, as
	suggested by John D. Hunter.  Fixes #133681.

	* gtk/gtk.override (_wrap_gtk_menu_popup): accept large long
	integers for the 'time' argument.

2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* Makefile.am:
	* gtk/Makefile.am: applied patch from Naofumi Yasufuku. Fixes
	bug 121339 (dsextras.py installation directory).

2004-02-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_pixbuf_new_from_array)
	(_wrap_gdk_pixbuf_new_from_array): apply Tim Evans' patch to
	create pixbuf from data (string) or from a Numeric Python array.

2004-02-22  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* codegen/h2def.py: don't expect a whitespace after the type name
	Fixes bug #128988, patch from Jon Willeke.

2004-02-19  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktreeview.override (pygtk_cell_data_func_marshal): Fix
	multiple python object reference leaks.

2004-02-14  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_binding_entry_remove): impl.

	* gtk/gtk.defs (binding_entry_remove): remove gtk_ prefix from
	function name.

2004-02-10  Seth Nickell  <seth@gnome.org>

	Reviewed by: random luser <kiko@async.com.br>

	* gtk/gdk.override:

	Change type of argument in signature for gdk.event_get_axis