@@ -1,3 +1,14 @@
+2004-03-01  Johan Dahlin  <johan@gnome.org>
+
+	* codegen/codegen.py (Wrapper.write_methods): Check for defined
+	methods in the override file.
+	(Wrapper.write_functions): Ditto for functions
+
+	* codegen/override.py (Overrides.__parse_override): Clean up a
+	little and add some docstrings. Also add a new keyword, define
+	(Overrides.get_functions, Overrides.get_defines_for) 
+	(Overrides.function, Overrides.define): New methods.
+
 2004-02-28  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* gtk/gtk.override (_wrap_gtk_accel_group_connect): Add wrapper
